Add dim overlay and reels background, block closing while spinning
- Added semi-transparent dimmer overlay when slot machine is open
- Implemented reels background
- Disabled closing of slot machine UI while reels are spinning